# tui-textarea

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md
bench/benches/: cursor.rs  delete.rs  insert.rs  search.rs
bench/src/: lib.rs
examples/: editor.rs  full_width_highlight.rs  helix_light.rs  line_numbers_wordwrap.rs  minimal.rs  modal.rs  multi.rs  password.rs  placepop.rs  popup_placeholder.rs  ratatui_editor.rs  ratatui_minimal.rs  ratatui_placepop.rs  ratatui_popup_placeholder.rs  ratatui_termion.rs  search.rs  single_line.rs  split.rs  termion.rs  termwiz.rs  tuirs_editor.rs  tuirs_minimal.rs  tuirs_popup_placeholder.rs  tuirs_termion.rs  variable.rs  variable_wordwrap.rs  vim.rs  wordwrap.rs  wrap_dem.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: edit.rs  insert_delete.rs
src/: blocks.rs  clipboard.rs  cursor.rs  edit.rs  highlight.rs  history.rs  input.rs  key_dispatch.rs  lib.rs  screen_map.rs  scroll.rs  search.rs  textarea.rs  util.rs  widget.rs  word.rs  wordwrap.rs
src/input/: crossterm.rs  mod.rs  termion.rs  termwiz.rs
tests/: cursor.rs  history.rs  input.rs  mod.rs  search.rs  serde.rs  textarea.rs
