[package]
name = "tui-textarea"
version = "0.1.4"
edition = "2021"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
tui-textarea is a simple yet powerful text editor widget for tui-rs. Multi-line
text editor can be easily put as part of your TUI application.
"""
license = "MIT"
homepage = "https://github.com/rhysd/tui-textarea#readme"
repository = "https://github.com/rhysd/tui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "textarea", "editor", "input", "edit"]
include = [
    "/src",
    "/examples",
    "/README.md",
    "/LICENSE.txt",
]

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "tui/crossterm"]
termion = ["dep:termion", "tui/termion"]
search = ["dep:regex"]

[dependencies]
crossterm = { version = "0.23", optional = true }
regex = { version = "1", optional = true }
termion = { version = "1.5", optional = true }
tui = { version = "0.18", default-features = false }

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "editor"
required-features = ["crossterm", "search"]

[[example]]
name = "split"
required-features = ["crossterm"]

[[example]]
name = "single_line"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[workspace]
members = [
    "bench",
]

[profile.bench]
lto = "thin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
