[package]
name = "tui-textarea"
version = "0.2.2"
edition = "2021"
rust-version = "1.56.1"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
tui-textarea is a simple yet powerful text editor widget for tui-rs and ratatui. Multi-line
text editor can be easily put as part of your TUI application.
"""
license = "MIT"
homepage = "https://github.com/rhysd/tui-textarea#readme"
repository = "https://github.com/rhysd/tui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
include = [
    "/src",
    "/examples",
    "/README.md",
    "/LICENSE.txt",
]

[features]
default = ["crossterm"]
# Features to use tui-rs
crossterm = ["dep:crossterm", "tui/crossterm"]
termion = ["dep:termion", "tui/termion"]
your-backend = ["tui"]
# Features to use ratatui
ratatui-crossterm = ["dep:crossterm-027", "ratatui/crossterm"]
ratatui-termion = ["dep:termion", "ratatui/termion"]
ratatui-your-backend = ["ratatui"]
# Other optional features
search = ["dep:regex"]

[dependencies]
crossterm = { package = "crossterm", version = "0.25", optional = true }
regex = { version = "1", optional = true }
termion = { version = "2.0", optional = true }
tui = { version = "0.19", default-features = false, optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }
crossterm-027 = { package = "crossterm", version = "0.27", optional = true }
ratatui = { version = "0.23.0", default-features = false, optional = true }

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "editor"
required-features = ["crossterm", "search"]

[[example]]
name = "split"
required-features = ["crossterm"]

[[example]]
name = "single_line"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[[example]]
name = "modal"
required-features = ["crossterm"]

[[example]]
name = "popup_placeholder"
required-features = ["crossterm"]

[[example]]
name = "ratatui_minimal"
required-features = ["ratatui-crossterm"]

[[example]]
name = "ratatui_popup_placeholder"
required-features = ["ratatui-crossterm"]

[[example]]
name = "ratatui_editor"
required-features = ["ratatui-crossterm", "search"]

[[example]]
name = "ratatui_termion"
required-features = ["ratatui-termion"]

[workspace]
members = [
    "bench",
]

[profile.bench]
lto = "thin"

[package.metadata.docs.rs]
features = ["search"]
rustdoc-args = ["--cfg", "docsrs"]
