[package]
name = "tui-textarea"
version = "0.2.4"
edition = "2021"
rust-version = "1.56.1" # for `tui` crate support
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
tui-textarea is a simple yet powerful text editor widget for ratatui and tui-rs. Multi-line
text editor can be easily put as part of your TUI application.
"""
license = "MIT"
homepage = "https://github.com/rhysd/tui-textarea#readme"
repository = "https://github.com/rhysd/tui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
include = [
    "/src",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE.txt",
]

[features]
default = ["crossterm"]
# Features to use ratatui
ratatui = ["dep:ratatui"]
crossterm = ["ratatui", "dep:crossterm", "ratatui/crossterm"]
termion = ["ratatui", "dep:termion", "ratatui/termion"]
termwiz = ["ratatui", "dep:termwiz", "ratatui/termwiz"]
no-backend = ["ratatui"]
# Features to use tui-rs
tuirs = ["dep:tui"]
tuirs-crossterm = ["tuirs", "dep:crossterm-025", "tui/crossterm"]
tuirs-termion = ["tuirs", "dep:termion", "tui/termion"]
tuirs-no-backend = ["tuirs"]
# Other optional features
search = ["dep:regex"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
crossterm = { package = "crossterm", version = "0.27", optional = true }
crossterm-025 = { package = "crossterm", version = "0.25", optional = true }
ratatui = { version = "0.23.0", default-features = false, optional = true }
regex = { version = "1", optional = true }
termion = { version = "2.0", optional = true }
termwiz = { version = "0.20.0", optional = true }
tui = { version = "0.19", default-features = false, optional = true }
unicode-width = "0.1.11"

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "editor"
required-features = ["crossterm", "search"]

[[example]]
name = "split"
required-features = ["crossterm"]

[[example]]
name = "single_line"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[[example]]
name = "modal"
required-features = ["crossterm"]

[[example]]
name = "password"
required-features = ["crossterm"]

[[example]]
name = "popup_placeholder"
required-features = ["crossterm"]

[[example]]
name = "termwiz"
required-features = ["termwiz"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "tuirs_minimal"
required-features = ["tuirs-crossterm"]

[[example]]
name = "tuirs_editor"
required-features = ["tuirs-crossterm", "search"]

[[example]]
name = "tuirs_termion"
required-features = ["tuirs-termion"]

[workspace]
members = [
    "bench",
]

[profile.bench]
lto = "thin"

[package.metadata.docs.rs]
features = ["search"]
rustdoc-args = ["--cfg", "docsrs"]
