[package]
name = "tui-textarea-bench"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
bench = false

[dependencies]
tui-textarea = { path = "..", default-features = false }
tui = { version = "0.18", default-features = false }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "insert"
harness = false
